--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,10 @@ pipeline{
    agent any 
    stages{
      stage("compile"){
-         sh 'javac Sample.java'
+        steps{ sh 'javac Sample.java'}
      }
      stage("run"){
-        sh "java Sample"
+       steps {sh "java Sample"}
      }
    } 
 }
